<resources>
    <string name="app_name">Tamil Songs &amp; Lyrics</string>
    <string name="title_player">Music Box</string>
    <string name="title_gallery">Library</string>
    <string name="title_Favourites">Favourites</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_about">About</string>
    <string name="app_summary">The Best Tamil Song Streaming App with Lyrics</string>
    <string name="share">Share</string>
    <string name="lyrics">Lyrics</string>
    <string name="album">Album/Film:</string>
    <string name="song_title">Title of the Song:</string>
    <string name="submit">SUBMIT</string>
    <string name="shareapp">Share App</string>
    <string name="contact">Contact us</string>
    <string name="rate">Rate us</string>
    <string name="song_req">Song Request</string>
    <string name="theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
