<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient"
    android:padding="10dp"
    app:cardBackgroundColor="@color/md_light_green_A700"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/convergence"
            android:gravity="center"
            android:text="@string/theme"
            android:textAlignment="center"
            android:textColor="@color/md_white_1000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioAndroid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector"
                android:button="@null"
                android:checked="true"
                android:fontFamily="@font/convergence"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/theme_light"
                android:textColor="@drawable/rbtn_textcolor_selector"
                android:textStyle="bold" />


            <RadioButton
                android:id="@+id/radioWindows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector"
                android:button="@null"
                android:fontFamily="@font/convergence"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/theme_dark"
                android:textColor="@drawable/rbtn_textcolor_selector"
                android:textStyle="bold" />
        </RadioGroup>

    </LinearLayout>
</android.support.v7.widget.CardView>