<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    app:cardBackgroundColor="@color/md_light_green_A700"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/convergence"
            android:text="@string/song_req"
            android:textAlignment="center"
            android:textColor="@color/md_white_1000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/convergence"
            android:text="@string/album"
            android:textColor="@color/md_white_1000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/md_white_1000"
            android:ems="10"
            android:fontFamily="@font/convergence"
            android:inputType="textCapSentences"
            android:padding="3dp"
            android:textColor="@color/md_blue_600" />


     <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/convergence"
            android:text="@string/song_req"
            android:textColor="@color/md_white_1000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/md_white_1000"
            android:ems="10"
            android:fontFamily="@font/convergence"
            android:inputType="textCapSentences"
            android:padding="3dp"
            android:textColor="@color/md_blue_600"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@color/md_green_700"
            android:elevation="5dp"
            android:fontFamily="@font/convergence"
            android:text="@string/submit"
            android:textColor="@color/md_white_1000"
            android:textSize="18sp" />

    </LinearLayout>
</android.support.v7.widget.CardView>